ligolang/src/test/contracts/negative/linearity.ligo
type foofoo is record [ foo : string; foo : int ]
const foofoo : foofoo = record [ foo = "foo"; foo = 1 ]